<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/profile" />

    <TextView
        android:layout_below="@+id/img_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_user_name"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:text="@string/nav_header_title"
         />

    <TextView
        android:layout_below="@+id/tv_user_name"
        android:id="@+id/tv_user_email"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</RelativeLayout>
